# CS381

./: README.md  resources.cfg
AS6/: AIMgr.cs  AS6  AudioMixer.mixer  CameraMgr.cs  Command.cs  ControlMgr.cs  Entity381.cs  EntityMgr.cs  Follow.cs  Intercept.cs  Main.cs  Move.cs  OrientedPhysics.cs  PhysicsAndInput.cs  Selctor.cs  SelectionMgr.cs  SoundMgr.cs  Teleport.cs  UIMgr.cs  UnitAI.cs  Utils.cs
CIGARETTE-V2/: cigarette-V2.mesh  cigarette-backV2.material  cigarette-metalV2.material  cigarette-paintV2.material
CVN75/: cvn75.material  cvn75.mesh
DDG51-V2/: ddg51-v2.material  ddg51-v2.mesh
Islands/: IslandTerrain.material  island1.mesh  island1.mesh.xml  island2.mesh  island2.mesh.xml  island3.mesh  island3.mesh.xml  island4.mesh  island4.mesh.xml  island5.mesh  island5.mesh.xml  island6.mesh  island6.mesh.xml  island7.mesh  island7.mesh.xml  island8.mesh  island8.mesh.xml
TUG/: tug.material  tug.mesh
aS3/: resources.cfg
as2/: CMakeLists.txt  resources.cfg
as2/Materials/: TexturesCom_Pavement_RoadOld_Yellow_1K_albedo.tif  TexturesCom_Pavement_RoadOld_Yellow_1K_albedo.tif~  as1.material
as2/Meshes/CG47/: cg47.material
as2/Meshes/Hangar/: hangar.mesh.xml
as2/Meshes/PolyPlane/: Red.material  Tires.material  White.material  Windows.material
as2/Meshes/Trees/: TreeBellA.mesh  TreeDiamondA.mesh  TreeDiamondA.mesh.xml  TreePineA.mesh.xml  TreeRoundA.mesh.xml
as2/inc/: Entity381.h  EntityMgr.h  as2.h
as2/src/: BaseApplication.cpp  Entity381.cpp  EntityMgr.cpp  as2.cpp
inc/: Aspect.h  Entity381.h  EntityMgr.h  as3.h
src/: Aspect.cpp  as3.cpp  (+2 more)
(+27 files in other folders)
